[package]
name = "lsb-image"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "lsb-image-cli"
path = "src/main.rs"

[lib]
name = "lsb_image"
path = "src/lib.rs"

[dependencies]
image = "0.24.5"
bitvec = "1.0.1"
regex = "1"
