[package]
name = "image-lsb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "image-lsb-cli"
path = "src/main.rs"

[lib]
name = "image_lsb"
path = "src/lib.rs"

[dependencies]
image = "0.24.5"
bitvec = "1.0.1"
regex = "1"
rand = "0.8.5"
clap = { version = "4.0", features = ["derive"] }
